# sim-course

./: .gitmodules
lab1/: .clang-format  CMakeLists.txt  README.md  assembler.rb  build.sh  decoder.cpp  decoder.h  executor.cpp  executor.h  fib.hex  fib.tisa  fix.cpp  sim.cpp  sim.h  sim.sh  to_bin.py
lab1/.cache/clangd/index/: InstructionDetails.h.52A1A285C31601CF.idx  InstructionInfo.h.30AFA21A32EE24D9.idx  MemoryAccessFault.h.8856B453868727EA.idx  cpu.cpp.64AAF591C11F1A0D.idx  cpu.h.1D9D224CACEA5535.idx  decoder.cpp.E06D6617D74125F5.idx  decoder.h.806401AB7208C434.idx  defs.h.2C6BCF982F1BE3DA.idx  executor.cpp.3DBDB25A70622A43.idx  executor.h.633789438BDDA82E.idx  helpers.cpp.9D84A17F18223EDB.idx  helpers.h.EB6F5BF8DDE42BC5.idx  machine.cpp.6B86818E97AFAFAE.idx  machine.h.5FFF1618357F7D70.idx  main.cpp.CE074D0C3C2A0D22.idx  main.cpp.F77F5B42B094E3C1.idx  memory.cpp.A7C43FCC07E69735.idx  memory.h.DCCC294FE28488CA.idx  simulator.cpp.40FBE5C40FF31922.idx  simulator.h.737E09C2D6B7D3AE.idx  test_helpers.cpp.68FA3802730AC83D.idx
lab1/include/: MemoryRegionAccessFault.h  assembler.h  cpu.h  cpu_defs.h  decoder.h  defs.h  executor.h  helpers.h  machine.h  memory.h  simulator.h
lab1/include/isa/: InstructionDetails.h  InstructionInfo.h
lab1/src/: assembler.cpp  cpu.cpp  decoder.cpp  executor.cpp  helpers.cpp  machine.cpp  main.cpp  memory.cpp  simulator.cpp
lab1/tests/: add.rb  except.rb  fib.rb  fib.tisa  jump.rb  jump.tisa  jump_back.rb  main.cpp  mul.tisa  no_exit.rb  rori.rb  ssat.rb  stld.rb  stld2.rb  stp.rb  sum.tisa  test_helpers.cpp
